# pds-portail

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  coverage.xml  fly.toml  pyproject.toml  render.yaml
.cline/rules/: backend-python.md  documentation.md  frontend-svelte.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-fly.yml  keepalive.yml
Doc/10-produit/03-roadmap/: roadmap-mvp.md
Doc/20-technique/01-spec/: spec-006-recherche-multilingue-synonymes.md  spec-009-service-payant-surveillance-changements.md
Doc/20-technique/02-exploitation/: slo-baseline.md
Doc/30-decisions/adr/: 0023-recherche-differenciante-et-pilotage-efficience.md  0030-token-watcher-surveillance.md  0035-contrat-openapi-generer-types-typescript.md
app/: __init__.py  main.py
app/application/: __init__.py
app/application/errors/: ingestion.py
app/application/ports/: __init__.py  cache_read_repository.py  cache_repository.py  changelog_repository.py  ckan_client.py  ckan_payloads.py  ckan_types.py  license_repository.py  magic_link_repository.py  normalizer_port.py  query_cache_repository.py  search_repository.py  watcher_repository.py
app/application/use_cases/: cached_get_dataset_detail.py  cached_search_datasets.py  compare_datasets.py  detect_changes.py  explore_resource.py  get_dataset_detail.py  get_health_status.py  get_resource_detail.py  invalidate_cache_after_sync.py  run_sync_cycle.py  search_datasets.py  send_alerts.py  sync_ckan_batch.py
app/core/: __init__.py  config.py
app/domain/: __init__.py  _query_dictionaries.py  cache_health.py  cache_invalidation.py  ckan_normalized.py  ckan_normalizer.py  dataset_analyzer.py  quality_indicators.py  query_expansion.py  ranking.py
app/infrastructure/: __init__.py
app/infrastructure/email/: alert_email.html  alert_email.txt  magic_link_email.html  magic_link_email.txt  welcome_email.html  welcome_email.txt
app/infrastructure/persistence/: __init__.py  _search_helpers.py  cache_read_repository.py  cache_repository.py  (+14 more)
app/presentation/: __init__.py
backlog/completed/: pds-84 - PDS-84-Frontend-—-Composant-ExploreDataset-avec-clé-API-et-affichage-des-résultats.md
backlog/tasks/: pds-31 - creer-la-page-de-ponderation.md  pds-87 - PDS-87-Backend-—-Use-case-de-détection-des-changements-détat.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  svelte.config.ts  vite.config.ts
frontend/scripts/: check-lighthouse-thresholds.mjs  openapi.json  run-lighthouse-profile.mjs  run-lighthouse-suite.mjs  validate-design-system.mjs  validate-js-delivery.mjs
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/static/: robots.txt  sitemap.xml
scripts/: check-security-headers.sh
tests/: conftest.py  fakes.py  fixtures.py
tests/integration/: test_sync_ckan_batch.py
tests/utils/: __init__.py  time.py
(+174 files in other folders)
