[project]
name = "pds-portail-backend"
version = "1.1.1"
description = "Backend FastAPI pour l'explorateur Open Data Suisse"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.0,<26.6.0",
    "httpx>=0.27.0,<1.0.0",
    "mypy>=2.1.0,<2.2.0",
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.4.0,<1.5.0",
    "pytest-cov>=7.1.0,<7.2.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = [
    # PDS-45/PDS-00 : les fixtures partagees et fakes dans tests/ declenchent
    # "Source file found twice" quand le dossier parent manque de __init__.py.
    # Les ajouter casserait la decouverte de pytest (qui ignore __init__.py).
    "tests/unit/application/use_cases/fakes.py",
    "tests/integration/api/_fixtures.py",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=80 --cov-report=term-missing"
testpaths = ["tests"]
